--- a/todo.html
+++ b/todo.html
@@ -101,9 +101,9 @@
             </div>
             <div><span id="dateToday">Quarta-feira, 27 de abril de 2022 </span></div>
         </header>
-        <section class="tasks">
+        <section class="tasks" >
             <div class="allDone"></div>
-            <div class="task">
+            <div class="task" id="1">
                 <div>
                     <input type="checkbox" name="" id="check_1">
                 </div>
