--- a/index.html
+++ b/index.html
@@ -1,146 +1,145 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Uma lista de tarefas, baseada no Microsoft ToDo">
-    <meta name="author" content="Guilherme Marciano">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="assets/css/todo.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
 
-
-    <title>Avanade - FIAP - ToDo </title>
+    <title>Guilherme Marciano Gonçalves Profile</title>
 </head>
 
 <body>
-
-    <section class="menu">
-        <header class="menu__header__profile">
-            <div>
-                <img class="header__img__profile" src="assets/images/image 5.png" alt="profile" />
+    <header>
+        <nav>
+            <div class="icon">
                 <p>
-                    <strong>Meu Nome</strong>
-                    <span class="profile e-mail">meuemail@gmail.com</span>
+                    <<span class="icon-text">Guilherme</span>>
                 </p>
             </div>
-            <div>
-                <form>
-                    <label for="busca">
-                        <input type="search" name="q" placeholder="Search" />
-                        <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
-                            <path
-                                d="M16.292 17.5 11.125 12.333Q10.438 12.854 9.635 13.115Q8.833 13.375 7.958 13.375Q5.688 13.375 4.094 11.802Q2.5 10.229 2.5 7.958Q2.5 5.688 4.094 4.094Q5.688 2.5 7.958 2.5Q10.229 2.5 11.802 4.094Q13.375 5.688 13.375 7.958Q13.375 8.833 13.125 9.635Q12.875 10.438 12.333 11.104L17.5 16.292ZM7.958 11.625Q9.479 11.625 10.552 10.552Q11.625 9.479 11.625 7.958Q11.625 6.417 10.562 5.333Q9.5 4.25 7.958 4.25Q6.417 4.25 5.333 5.333Q4.25 6.417 4.25 7.958Q4.25 9.5 5.333 10.562Q6.417 11.625 7.958 11.625Z" />
-                        </svg>
-                    </label>
-                </form>
-            </div>
-        </header>
-        <div class="activity">
-            <ul>
-                <li><svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M16.9619 12.6027C16.9619 15.1825 14.8705 17.2738 12.2907 17.2738C9.71096 17.2738 7.61963 15.1825 7.61963 12.6027C7.61963 10.0229 9.71096 7.93158 12.2907 7.93158C14.8705 7.93158 16.9619 10.0229 16.9619 12.6027Z"
-                            stroke="#979797" />
-                        <line y1="-0.5" x2="4.55689" y2="-0.5"
-                            transform="matrix(-0.625412 0.780294 -0.780297 -0.62541 20.511 3.5777)" stroke="#979797" />
-                        <line y1="-0.5" x2="4.55689" y2="-0.5"
-                            transform="matrix(0.625412 0.780294 0.780297 -0.62541 4.07056 3.5777)" stroke="#979797" />
-                        <line x1="12.7908" y1="0.602661" x2="12.7908" y2="5.15955" stroke="#979797" />
-                        <line y1="-0.5" x2="4.55689" y2="-0.5"
-                            transform="matrix(-4.5055e-07 -1 -1 4.24078e-09 12.2908 24.6027)" stroke="#979797" />
-                        <line x1="0.288881" y1="12.1481" x2="4.8458" y2="12.1308" stroke="#979797" />
-                        <line y1="-0.5" x2="4.55696" y2="-0.5"
-                            transform="matrix(-0.999993 0.00378187 0.0037819 0.999993 24.2908 12.5573)"
-                            stroke="#979797" />
-                        <line y1="-0.5" x2="4.55689" y2="-0.5"
-                            transform="matrix(-0.625412 -0.780294 -0.780297 0.62541 20.511 21.6277)" stroke="#979797" />
-                        <line y1="-0.5" x2="4.55689" y2="-0.5"
-                            transform="matrix(0.625412 -0.780294 0.780297 0.62541 4.07056 21.6277)" stroke="#979797" />
-                    </svg>
-                    Meu dia</li>
-                <li><svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M12.7754 3.56771L15.3897 8.52265L15.5044 8.74009L15.7466 8.78201L21.2669 9.73715L17.3623 13.7546L17.191 13.9309L17.226 14.1743L18.0234 19.7195L12.996 17.2475L12.7754 17.139L12.5548 17.2475L7.52734 19.7195L8.32481 14.1743L8.3598 13.9309L8.18845 13.7546L4.28387 9.73715L9.80415 8.78201L10.0464 8.74009L10.1611 8.52265L12.7754 3.56771Z"
-                            stroke="#D59CAE" />
-                    </svg>
-                    Importante</li>
-                <li><svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect x="0.722412" y="1.14191" width="23" height="23" rx="4.5" stroke="#8AB7B5" />
-                        <line x1="6.69482" y1="4.62347" x2="6.69482" y2="19.8862" stroke="#8AB7B5" />
-                        <line x1="12.1143" y1="4.62347" x2="12.1143" y2="19.8862" stroke="#8AB7B5" />
-                        <line x1="17.5334" y1="4.62347" x2="17.5334" y2="19.8862" stroke="#8AB7B5" />
-                    </svg>
-                    Planejado</li>
-                <li><svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M5.17627 15.7707H19.9834V16.8951C19.968 16.9143 19.951 16.9355 19.9322 16.9586C19.83 17.0844 19.6778 17.2659 19.4809 17.4846C19.0866 17.9226 18.5159 18.5062 17.8118 19.0887C16.3895 20.2652 14.4903 21.3809 12.4361 21.3809C10.0531 21.3809 8.22869 20.2584 6.98252 19.1067C6.36048 18.5319 5.8899 17.9561 5.57543 17.5246C5.41845 17.3093 5.30111 17.1309 5.2239 17.0079C5.20581 16.9791 5.18992 16.9533 5.17627 16.9309V15.7707Z"
-                            stroke="#94BBAA" />
-                        <circle cx="12.7896" cy="8.68923" r="4.86476" stroke="#94BBAA" />
-                    </svg>
-                    Atribuidos a mim</li>
-                <li><svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M21.1241 11.2483L12.5945 3.70764L4.06494 11.6191V22.0646H10.7403V15.513H14.2015V22.0646H21.1241V11.2483Z"
-                            stroke="#ADB7DE" />
-                    </svg>
-                    Tarefas</li>
+            <ul class="horizontal-anchors">
+                <li><a href="#Home">
+                        <span>Home</span>
+
+                    </a>
+                </li>
+                <li><a href="#Sobre">Sobre</a></li>
+                <li><a href="#Projetos">Projetos</a></li>
+                <li><a href="#Contatos">Contatos</a></li>
             </ul>
-        </div>
+        </nav>
+    </header>
+    <main>
+        <section id="Home">
 
-    </section>
-    <main class="container">
-        <header>
-            <div>
-                <h1>Meu dia</h1>
-                <div>
-                    IdeaIcon
-                    OptionICON
-                </div>
-            </div>
-            <div><span id="dateToday">Quarta-feira, 27 de abril de 2022 </span></div>
-        </header>
-        <section class="tasks" >
-            <div class="allDone"></div>
-            <div class="task" id="1">
-                <div>
-                    <input type="checkbox" name="" id="check_1">
-                </div>
-                <div>
-                    <div>
-                        <span class="title-task">
-                            App arte ensaio
+            <article>
+                <h1>Olá, eu sou <strong>Guilherme</strong></h1>
+                <p>
+                    Sou um desenvolvedor web e estudante de <strong>Analise e desenvolvimento de sistemas</strong>, me
+                    especializando como <strong>desenvolvedor full-stack</strong>.
+                </p>
+            </article>
 
-                        </span>
-                    </div>
-                    <div>
-                        <ul>
-                            <li>Tarefas</li>
-                            <li class="list-disc">0 de 4</li>
-                            <li class="dueDate">Hoje</li>
-                            <li class="list-disc">Attached</li>
-                        </ul>
-                    </div>
-                </div>
-                <div>
-                    Star
-                </div>
-            </div>
+
+            <figure>
+                <img class="profile-img" src="assets/img/profile.jpg" alt="Guilherme Marciano Gonçalves">
+            </figure>
         </section>
-        <footer>
-            <form id="addNewTask">
-                <label for="inputTxtNewTask"></label>
-                ICONPLUS
-                <input type="text" id="inputTxtNewTask" placeholder="Adiconar novas Tarefas">
-            </form>
-        </footer>
+        <section id="Sobre">
+
+            <div class="section-title">
+                <p>Técnologias que estudo:</p>
+            </div>
+            <div class="tools-container">
+
+                <div id="frontend-tools" class="tool-card">
+                    <p class="tool-title">Front-End</p>
+                    <img src="assets/icons/frontendblue.png" alt="" class="tool-img">
+                    <ul id="FrontEnd-List" class="tool-list" hidden>
+                        <hr>
+                        <li><img src="assets/icons/languageIcons/file_type_html_icon_130541.ico" alt="" class="tool-icons">  HTML</li>
+                        <li><img src="assets/icons/languageIcons/file_type_css_icon_130661.ico" alt="" class="tool-icons"> CSS</li>
+                        <li><img src="assets/icons/languageIcons/javascript_icon_130900.ico" alt="" class="tool-icons"> JavaScript</li>
+                        <li><img src="assets/icons/languageIcons/file_type_angular_icon_130754.ico" alt="" class="tool-icons">
+                            Angular</li>
+                    </ul>
+                </div>
+                <div id="backend-tools" class="tool-card">
+                    <p class="tool-title">Back-End </p>
+                    <img src="assets/icons/backendblue.png" alt="" class="tool-img">
+                    <ul id="BackEnd-list" class="tool-list" hidden>
+                        <hr>
+                        <li><img src="assets/icons/languageIcons/java_original_wordmark_logo_icon_146459.ico" alt="" class="tool-icons"> Java</li>
+                        <li><img src="assets/icons/languageIcons/nodejs_original_logo_icon_146411.ico" alt="" class="tool-icons"> NodeJs</li>
+                        <li><img src="assets/icons/languageIcons/c_icon_132529.ico" alt="" class="tool-icons"> C#</li>
+                    </ul>
+                </div>
+                <div id="database-tools" class="tool-card">
+                    <p class="tool-title">Banco de dados</p>
+                    <img src="assets/icons/databaseblue.png" alt="" class="tool-img">
+                    <ul id="dbList" class="tool-list" hidden>
+                        <hr>
+                        <li><img src="assets/icons/languageIcons/mysql_original_logo_icon_146416.ico" alt="" class="tool-icons"> MySQL</li>
+                        <li><img src="assets/icons/languageIcons/mongodb_original_wordmark_logo_icon_146425.ico" alt="" class="tool-icons"> MongoDB</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="plus-tools">
+                <p>Outras Ferramentas:</p>
+                <figure>
+                    <img src="assets/icons/languageIcons/powerapp-2020-icon-1024x1024.png" alt="">
+
+                    <img src="assets/icons/languageIcons/postman_macos_bigsur_icon_189815.ico" alt="">
+                    <img src="assets/icons/languageIcons/file_type_git_icon_130581.ico" alt="">
+                    azure/
+                    azure devops
+                </figure>
+            </div>
+
+
+        </section>
+
+        <section id="Projetos">
+            <p>Projetos - Em Construção
+
+                <img src="" alt="">
+            </p>
+        </section>
 
     </main>
-    <section class="details">
+    <footer id="Contatos">
+        <p class="footer-title">Entre em contato:</p>
+        <ul>
+            <a href="https://www.linkedin.com/in/guilhermemgoncalves2" target="_blank">
+                <li>
+                    <img src="assets/icons/socialmediaIcons/linkedin_socialnetwork_17441.ico" alt="">
+                    LinkedIn
+                </li>
+            </a>
+            <a href="https://github.com/guilhermemgoncalves" target="_blank">
+                <li>
+                    <img src="assets/icons/socialmediaIcons/github_alt_macos_bigsur_icon_190138.ico" alt="">
+                    GitHub
+                </li>
+            </a>
+            <a href="https://www.instagram.com/_guimarciano/" target="_blank">
+                <li>
+                    <img src="assets/icons/socialmediaIcons/iconfinder-social-media-applications-3instagram-4102579_113804.ico" alt="">
+                    Instagram
+                </li>
+            </a>
+            <a href="mailto:guilherme_marciano@outlook.com.br" target="_blank">
+                <li>
+                    <img src="assets/icons/socialmediaIcons/Gmail_29991.ico" alt="">
+                    E-mail
+                </li>
+            </a>
+        </ul>
+        
+    </footer>
 
-    </section>
-    <script type="module" src="assets/js/todo.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
